# beast-mailbox-agent

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: sonarcloud.yml
.spec-workflow/specs/001-core-agent/: design.md  implementation.md  requirements.md
src/beast_mailbox_agent/: __init__.py  cli.py  config.py  context.py  handlers.py  metrics.py  runtime.py
src/beast_mailbox_agent/providers/: __init__.py  base.py  openai.py
tests/: __init__.py  conftest.py  test_basic.py  test_cli.py  test_config.py  test_context.py  test_metrics.py  test_prompt_handler.py  test_provider_openai.py  test_runtime.py  test_runtime_integration.py
